--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -18,9 +18,9 @@
         <!--suppress AndroidLintContentDescription -->
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@color/photo_placeholder" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/article_title"
@@ -33,7 +33,8 @@
             android:paddingBottom="4dp"
             android:textColor="@color/ltgray"
             android:ellipsize="end"
-            android:maxLines="4" />
+            android:maxLines="4"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/article_subtitle"
@@ -45,7 +46,8 @@
             android:paddingBottom="16dp"
             android:textColor="#6000"
             android:maxLines="2"
-            android:ellipsize="end" />
+            android:ellipsize="end"
+            android:gravity="center"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
