--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,12 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#C56238</color>
+    <color name="theme_primary_dark">#800000</color>
+    <color name="theme_accent">#FFC53E</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="black">#000000</color>
+
+    <!--#04561A-->
+
 </resources>
