1st Review of Make your app material fragment_article_detail.xml Please remove unused codes that are not comments. styles.xml please check this link to learn more on how to choose colors for your apps. https://www.materialpalette.com/ list_item_article.xml You are required to add a full bleed image. A full bleed image extends or "bleeds" to the edges of a page so that the image completely covers the entire page and does not show borders or white space around the edges.
Please check this link and this link for details.

https://support.blurb.com/hc/en-us/articles/207795236-Full-bleed-images-and-layouts-in-BookSmart

https://robots.thoughtbot.com/android-imageview-scaletype-a-visual-guide

activity_article_list.xml

Well done , you showed your knowledge of design support libraray by adding CoordinatorLayout. CoordinatorLayout is a super-powered FrameLayout. It is intended for two primary use cases:

As a top-level application decor or chrome layout
As a container for a specific interaction with one or more child views
Please learn more about the layout here and here .

Please go through an example here.

You are required to add AppbarLayout. Please check this link to learn more.

<android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent">

         <android.support.v7.widget.Toolbar
                 ...
                 app:layout_scrollFlags="scroll|enterAlways"/>

         <android.support.design.widget.TabLayout
                 ...
                 app:layout_scrollFlags="scroll|enterAlways"/>

     </android.support.design.widget.AppBarLayout>
Remember to set correct elevation value or use default by not setting the value. Check the material design specification to learn more on component elevation.

ArticleListActivity.java

You can extend AppCompactActivity. Please check this link for its usage and this link to learn more on why ActionBarActivity was deprecated

ArticleDetailAct

--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -29,6 +29,14 @@
         android:background="?colorPrimary"
         android:elevation="8dp">
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:fitsSystemWindows="true"
+            android:elevation="4dp">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -45,6 +53,8 @@
                 android:contentDescription="@string/app_name" />
 
         </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+
     </FrameLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+ </android.support.design.widget.CoordinatorLayout>
