--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:statusBarColor">#C56238</item>
         <item name="colorAccent">#FFC53E</item>
         <item name="colorPrimary">#C56238</item>
-        <item name="colorPrimaryDark">#800000</item>
+        <item name="colorPrimaryDark">#E64A19</item>
 
 
 
